--- a/tests/manual/rhi/CMakeLists.txt
+++ b/tests/manual/rhi/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory(geometryshader)
 add_subdirectory(stenciloutline)
 add_subdirectory(stereo)
 add_subdirectory(tex1d)
+add_subdirectory(displacement)
 if(QT_FEATURE_widgets)
     add_subdirectory(rhiwidget)
 endif()
