Trace: Convert qtopengl module to use tracepointgen tool
Pick-to: 6.5
Change-Id: I441455a4d49a559fb591ea5c8cffb97af66fb2b1
Reviewed-by: Hatem ElKharashy <hatem.elkharashy@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Janne Koskinen <janne.p.koskinen@qt.io>

--- a/src/opengl/CMakeLists.txt
+++ b/src/opengl/CMakeLists.txt
@@ -105,8 +105,12 @@ qt_internal_extend_target(OpenGL CONDITION QT_FEATURE_egl
         qopenglcompositorbackingstore.cpp qopenglcompositorbackingstore_p.h
 )
 
-
-qt_internal_create_tracepoints(OpenGL qtopengl.tracepoints)
+qt_internal_generate_tracepoints(OpenGL opengl
+    SOURCES
+        qopenglframebufferobject.cpp
+        qopenglpaintengine.cpp
+        qopengltexturecache.cpp
+)
 qt_internal_add_docs(OpenGL
     doc/qtopengl.qdocconf
 )
