--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -104,6 +104,7 @@ qt_internal_add_module(Core
         global/q20algorithm.h
         global/q20functional.h
         global/q20iterator.h
+        global/q20memory.h
         global/q20type_traits.h
         global/q23functional.h
         global/qxpfunctional.h
