--- a/src/plugins/platforms/xcb/gl_integrations/xcb_glx/CMakeLists.txt
+++ b/src/plugins/platforms/xcb/gl_integrations/xcb_glx/CMakeLists.txt
@@ -27,6 +27,8 @@ qt_internal_add_plugin(QXcbGlxIntegrationPlugin
         Qt::XcbQpaPrivate
 )
 
+set_target_properties(QXcbGlxIntegrationPlugin PROPERTIES UNITY_BUILD OFF) # X11 define clashes
+
 ## Scopes:
 #####################################################################
 
