--- a/src/tools/bootstrap/CMakeLists.txt
+++ b/src/tools/bootstrap/CMakeLists.txt
@@ -226,7 +226,7 @@ qt_internal_extend_target(Bootstrap CONDITION MINGW AND WIN32
 
 target_link_libraries(Bootstrap PRIVATE PlatformCommonInternal)
 qt_internal_apply_gc_binaries(Bootstrap PUBLIC)
-set_target_properties(Bootstrap PROPERTIES AUTOMOC OFF AUTOUIC OFF AUTORCC OFF)
+set_target_properties(Bootstrap PROPERTIES AUTOMOC OFF AUTOUIC OFF AUTORCC OFF UNITY_BUILD OFF)
 qt_internal_add_target_aliases(Bootstrap)
 qt_set_msvc_cplusplus_options(Bootstrap PUBLIC)
 qt_set_common_target_properties(Bootstrap)
