QtWidgets: Fix CMake Unity (Jumbo) builds
Remove clashing enumeration value ColumnCount and exclude
file in snippets.

Task-number: QTBUG-109394
Change-Id: Ibd8a72d9d87e3dcbbb221c364d6b4c4f59b315df
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit e73389874d6f8dbfc4743c51eb3d3889dd2da7fb)

--- a/src/widgets/CMakeLists.txt
+++ b/src/widgets/CMakeLists.txt
@@ -70,6 +70,11 @@ qt_internal_add_module(Widgets
     GENERATE_CPP_EXPORTS
 )
 
+if(APPLE)
+    set_source_files_properties(kernel/qapplication.cpp
+                                PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
+endif()
+
 # Resources:
 set(qstyle_resource_files
     "styles/images/cdr-128.png"
