--- a/tests/auto/network/socket/qtcpserver/test/CMakeLists.txt
+++ b/tests/auto/network/socket/qtcpserver/test/CMakeLists.txt
@@ -13,6 +13,7 @@ qt_internal_add_test(tst_qtcpserver
         ../tst_qtcpserver.cpp
     LIBRARIES
         Qt::Network
+        Qt::TestPrivate
     QT_TEST_SERVER_LIST "danted" "cyrus" "squid" "ftp-proxy" # special case
 )
 
