Add android manifest and java files to example
These files should not change the outcome of the build process, but are
merely added to better support the CMake and Android integration in
Qt Creator. Also those files were previously listed in the OTHER_FILES
section of the qmake project files.

Change-Id: Id3d403130ee8800ed6b0877f9f1c3dd1f28b46b7
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>

--- a/examples/corelib/platform/androidnotifier/CMakeLists.txt
+++ b/examples/corelib/platform/androidnotifier/CMakeLists.txt
@@ -23,6 +23,8 @@ qt_add_executable(androidnotifier
     main.cpp
     notificationclient.cpp
     notificationclient.h
+    android/src/org/qtproject/example/androidnotifier/NotificationClient.java
+    android/AndroidManifest.xml
 )
 
 target_link_libraries(androidnotifier PRIVATE
