Revert "Add support for MultiABI with custom install dir of the android-build"
This reverts commit 979a21dc4ee0c6f483c6b55e9242a153d659ab6f.

Reason for revert: Caused QTBUG-110836

Task-number: QTBUG-110836
Change-Id: I4f31018954e6bb0f4e7b6db0df76d04c0a56d9b1
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/network/android/jar/CMakeLists.txt
+++ b/src/network/android/jar/CMakeLists.txt
@@ -13,10 +13,8 @@ qt_internal_add_jar(Qt${QtBase_VERSION_MAJOR}AndroidNetwork # special case
     OUTPUT_DIR "${QT_BUILD_DIR}/jar"
 )
 
-qt_path_join(destination ${INSTALL_DATADIR} "jar")
-
 install_jar(Qt${QtBase_VERSION_MAJOR}AndroidNetwork # special case
-    DESTINATION ${destination}
+    DESTINATION jar
     COMPONENT Devel
 )
 
