--- a/src/android/jar/CMakeLists.txt
+++ b/src/android/jar/CMakeLists.txt
@@ -28,10 +28,8 @@ qt_internal_add_jar(Qt${QtBase_VERSION_MAJOR}Android # special case
     OUTPUT_DIR "${QT_BUILD_DIR}/jar"
 )
 
-qt_path_join(destination ${INSTALL_DATADIR} "jar")
-
 install_jar(Qt${QtBase_VERSION_MAJOR}Android # special case
-    DESTINATION ${destination}
+    DESTINATION jar
     COMPONENT Devel
 )
 
