Revert "Revert "Add support for MultiABI with custom install dir of the android-build""
This reverts commit d7e8d5bb1b5a9c4b21a3d824780c672eaf4e56b1.

Reason for revert: Found a working solution for the issue.

Change-Id: Ia720cc63ece9dfb1a24067cdd9c3d79d4edbe3be
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 871f7a05db4b152387c563be519cf3426a9b249e)

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -429,7 +429,7 @@ if(ANDROID)
         jar/Qt${QtBase_VERSION_MAJOR}Android.jar
     )
     set_property(TARGET Core APPEND PROPERTY QT_ANDROID_LIB_DEPENDENCIES
-        plugins/platforms/libplugins_platforms_qtforandroid.so
+        ${INSTALL_PLUGINSDIR}/platforms/libplugins_platforms_qtforandroid.so
     )
     set_property(TARGET Core APPEND PROPERTY QT_ANDROID_PERMISSIONS
         android.permission.INTERNET android.permission.WRITE_EXTERNAL_STORAGE
