--- a/src/android/jar/CMakeLists.txt
+++ b/src/android/jar/CMakeLists.txt
@@ -26,7 +26,8 @@ qt_internal_add_jar(Qt${QtBase_VERSION_MAJOR}Android
     OUTPUT_DIR "${QT_BUILD_DIR}/jar"
 )
 
+qt_path_join(destination ${INSTALL_DATADIR} "jar")
 install_jar(Qt${QtBase_VERSION_MAJOR}Android
-    DESTINATION jar
+    DESTINATION ${destination}
     COMPONENT Devel
 )
