permissions: Replace deprecated location permission usage key
And add the macOS specific key.

Pick-to: 6.5
Change-Id: I1e0446a1927ef530322388417b9300ae287752c3
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Juha Vuolle <juha.vuolle@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -1240,11 +1240,18 @@ if(QT_FEATURE_permissions AND APPLE)
     qt_internal_extend_target(QDarwinLocationPermissionPlugin
         LIBRARIES ${FWCoreLocation}
     )
-    set_property(TARGET QDarwinLocationPermissionPlugin PROPERTY
-        _qt_info_plist_usage_descriptions
-            "NSLocationWhenInUseUsageDescription"
-            "NSLocationAlwaysUsageDescription"
-    )
+    if(MACOS)
+        set_property(TARGET QDarwinLocationPermissionPlugin PROPERTY
+            _qt_info_plist_usage_descriptions
+                "NSLocationUsageDescription"
+        )
+    else()
+        set_property(TARGET QDarwinLocationPermissionPlugin PROPERTY
+            _qt_info_plist_usage_descriptions
+                "NSLocationWhenInUseUsageDescription"
+                "NSLocationAlwaysAndWhenInUseUsageDescription"
+        )
+    endif()
 endif()
 
 qt_internal_extend_target(Core CONDITION QT_FEATURE_permissions AND ANDROID
