Add basic test for QWindow foreign windows
Only implemented on macOS and Windows for now.

Change-Id: Ib6330bc7024453d23675c1770367e8da6c4c9a34
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>

--- a/tests/auto/gui/kernel/qwindow/CMakeLists.txt
+++ b/tests/auto/gui/kernel/qwindow/CMakeLists.txt
@@ -14,6 +14,22 @@ qt_internal_add_test(tst_qwindow
         Qt::GuiPrivate
 )
 
+if(APPLE OR WIN32)
+    qt_internal_add_test(tst_foreignwindow
+        SOURCES
+            tst_foreignwindow.cpp
+        LIBRARIES
+            Qt::CorePrivate
+            Qt::Gui
+            Qt::GuiPrivate
+    )
+
+    if(APPLE)
+        target_compile_options(tst_foreignwindow PRIVATE -x objective-c++)
+        set_property(TARGET tst_foreignwindow PROPERTY PROPERTY MACOSX_BUNDLE TRUE)
+    endif()
+endif()
+
 ## Scopes:
 #####################################################################
 
