Revert "Don't include qnetworkproxy_generic.cpp for iOS"
This reverts commit ce955d1907ac57d25571e82f57cd94f5abe883e1.

Reason for revert: There is no qnetworkproxy_darwin.cpp in 6.5. This
shouldn't have been picked back.

Fixes: QTBUG-111010
Change-Id: Ic58b3e1a2893cc1e42cba806701f4db7b98302f7
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/network/CMakeLists.txt
+++ b/src/network/CMakeLists.txt
@@ -271,7 +271,7 @@ qt_internal_extend_target(Network CONDITION ANDROID # special case
         kernel/qnetworkproxy_android.cpp
 )
 
-qt_internal_extend_target(Network CONDITION UNIX AND NOT ANDROID AND NOT APPLE AND NOT QT_FEATURE_libproxy AND (UNIX OR WINRT) # special case
+qt_internal_extend_target(Network CONDITION UNIX AND NOT ANDROID AND NOT MACOS AND NOT QT_FEATURE_libproxy AND (UNIX OR WINRT) # special case
     SOURCES
         kernel/qnetworkproxy_generic.cpp
 )
