Improve FindWrapRt, and SHM detection
Apparently, more and more librt functionality are being moved to glibc
these days, e.g., clock_gettime, clock_getres, clock_settime,
clock_getcpuclockid, clock_nanosleep. As Thiago mentioned, in face,
all librt functions are moving into glibc, but unlike the clock_*
functions that I can see are ported from 2.17+, I cannot find out when
and what functions are already ported. So, here, I added a second test
which tries to explicitly look for shm_* functions, if they are there,
as well as the clock_* function, then we are more confident that we
actually have a useful the libRt in the system.

Also, making the FEATURE_posix_SHM depends on UNIX.

Pick-to: 6.5
Fixes: QTBUG-111049
Change-Id: I08b7f4656ecd9313b552fb05ca7096f5b987b95a
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -1140,14 +1140,16 @@ qt_internal_extend_target(Core CONDITION QT_FEATURE_glib AND UNIX
         GLIB2::GLIB2
 )
 
-qt_internal_extend_target(Core CONDITION QT_FEATURE_clock_gettime AND UNIX
+qt_internal_extend_target(Core CONDITION QT_FEATURE_clock_gettime
     LIBRARIES
         WrapRt::WrapRt
 )
 
-qt_internal_extend_target(Core CONDITION QT_FEATURE_posix_shm
+qt_internal_extend_target(Core CONDITION QT_FEATURE_posix_shm AND UNIX
     SOURCES
         ipc/qsharedmemory_posix.cpp
+    LIBRARIES
+        WrapRt::WrapRt
 )
 qt_internal_extend_target(Core CONDITION QT_FEATURE_sysv_shm
     SOURCES
@@ -1156,6 +1158,8 @@ qt_internal_extend_target(Core CONDITION QT_FEATURE_sysv_shm
 qt_internal_extend_target(Core CONDITION QT_FEATURE_posix_sem
     SOURCES
         ipc/qsystemsemaphore_posix.cpp
+    LIBRARIES
+        WrapRt::WrapRt
 )
 qt_internal_extend_target(Core CONDITION QT_FEATURE_sysv_sem
     SOURCES
