Fix build issue in manual example qtabbar/stylesheet
Pick-to: 6.5
Change-Id: Ibeb1a83ea74bea53e76990d7448552e33f3d875a
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/tests/manual/widgets/widgets/qtabbar/CMakeLists.txt
+++ b/tests/manual/widgets/widgets/qtabbar/CMakeLists.txt
@@ -1,17 +1,4 @@
-# Copyright (C) 2022 The Qt Company Ltd.
+# Copyright (C) 2023 The Qt Company Ltd.
 # SPDX-License-Identifier: BSD-3-Clause
 
-# Generated from qtabbar.pro.
-
-#####################################################################
-## qtabbar Binary:
-#####################################################################
-
-qt_internal_add_manual_test(qtabbar
-    GUI
-    LIBRARIES
-        Qt::Gui
-)
-
-#### Keys ignored in scope 1:.:.:qtabbar.pro:<TRUE>:
-# SUBDIRS = "stylesheet"
+add_subdirectory(stylesheet)
