Direct2d QPA plugin: Add exclusions for Unity builds
Similar to the Windows QPA plugin.

Pick-to: 6.5
Task-number: QTBUG-109394
Change-Id: I8e094e4ec49574441d3fd73e7ac2cc6fe3b5fd5f
Reviewed-by: Amir Masoud Abdol <amir.abdol@qt.io>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/src/plugins/platforms/direct2d/CMakeLists.txt
+++ b/src/plugins/platforms/direct2d/CMakeLists.txt
@@ -45,6 +45,9 @@ qt_internal_add_plugin(QWindowsDirect2DIntegrationPlugin
         qwindowsdirect2dplatformpixmap.cpp qwindowsdirect2dplatformpixmap.h
         qwindowsdirect2dplatformplugin.cpp
         qwindowsdirect2dwindow.cpp qwindowsdirect2dwindow.h
+    NO_UNITY_BUILD_SOURCES
+        ../windows/qwindowspointerhandler.cpp
+        ../windows/qwindowsmousehandler.cpp
     DEFINES
         QT_NO_CAST_FROM_ASCII
         QT_NO_FOREACH
