QElapsedTimer/Darwin: merge with the Unix implementation
Old versions of the Apple operating systems did not implement the POSIX
realtime monotonic clock, so we used the Mach absolute timer. The LLVM
libc++ implementation[1] unconditionally uses CLOCK_MONOTONIC_RAW on
these OSes:
 * macOS >= 10.12
 * iPhoneOS >= 10.0
 * tvOS >= 10.0
 * watchOS >= 3.0

Qt 6 doesn't support the latter two and the former two are much older
than what we require, so we can use this functionality too.

[1] https://github.com/llvm/llvm-project/blob/main/libcxx/src/chrono.cpp

Change-Id: Ieec322d73c1e40ad95c8fffd174641c723b81be2
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
Reviewed-by: Ahmad Samir <a.samirh78@gmail.com>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -573,7 +573,6 @@ qt_internal_extend_target(Core CONDITION APPLE
         kernel/qcore_foundation.mm
         kernel/qcore_mac.mm kernel/qcore_mac_p.h
         kernel/qcoreapplication_mac.cpp
-        kernel/qelapsedtimer_mac.cpp
         kernel/qeventdispatcher_cf.mm kernel/qeventdispatcher_cf_p.h
     LIBRARIES
         ${FWCoreFoundation}
@@ -973,7 +972,7 @@ qt_internal_extend_target(Core CONDITION APPLE AND NOT MACOS
         ${FWMobileCoreServices}
 )
 
-qt_internal_extend_target(Core CONDITION UNIX AND NOT APPLE
+qt_internal_extend_target(Core CONDITION UNIX
     SOURCES
         kernel/qelapsedtimer_unix.cpp
 )
