CMake: Fix linkage with lld 16.0
lld 16.0 is more picky about symbol versioning than previous versions
(and other linkers such as ld.bfd, gold or mold).
It now errors out if a symbol is versioned but not defined
(see 8796677de8900dc154aef45f8620c3f987a40291).

Outside of detecting support for symbol versioning (fixed by 462832),
this causes linking Qt6 libraries other than Qt6Core to fail because
their linker scripts try to add versioning to qt_version_tag, which is
defined in Qt6Core rather than the library being linked.

The obvious (and working) fix is to version qt_version_tag only where it is
defined (Qt6Core), but this is not what the original intent seems to be.

Task-number: QTBUG-111514
Change-Id: I963d417befb0f6b2260c57f059eeda1fe79200c9
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -1392,3 +1392,22 @@ if(APPLE AND QT_FEATURE_framework AND QT_FEATURE_separate_debug_info)
         DESTINATION "${dsym_script_install_dir}"
     )
 endif()
+
+set(linker_script_contents "")
+if (QT_NAMESPACE STREQUAL "")
+    set(tag_symbol "qt_version_tag")
+else()
+    set(tag_symbol "qt_version_tag_${QT_NAMESPACE}")
+endif()
+foreach(minor_version RANGE ${PROJECT_VERSION_MINOR})
+    set(previous "${current}")
+    set(current "Qt_${PROJECT_VERSION_MAJOR}.${minor_version}")
+    if (minor_version EQUAL ${PROJECT_VERSION_MINOR})
+        string(APPEND linker_script_contents "${current} { ${tag_symbol}; } ${previous};\n")
+    else()
+        string(APPEND linker_script_contents "${current} {} ${previous};\n")
+    endif()
+endforeach()
+qt_internal_extend_target(Core
+    EXTRA_LINKER_SCRIPT_CONTENT "${linker_script_contents}"
+)
