Move xmlstreamlint example into tests/manual
This example is useful but not a typical starting point for an
application.

Task-number: QTBUG-110647
Change-Id: Ic4af8ed648c587b91110a7403fa80c619549289d
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit e13b57d06ab6e81cf04c090cc46dd23b4f8daccf)
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>

--- a/tests/manual/CMakeLists.txt
+++ b/tests/manual/CMakeLists.txt
@@ -61,6 +61,7 @@ add_subdirectory(widgetgrab)
 if(QT_FEATURE_xcb)
     add_subdirectory(xembed)
 endif()
+add_subdirectory(xmlstreamlint)
 add_subdirectory(shortcuts)
 add_subdirectory(dialogs)
 add_subdirectory(windowtransparency)
