Network: link directly to libresolv instead of dlopen()ing it
There's little need for us to dynamically load it. The reasons why that
was necessary aren't in the public history (Qt 4.5 already had it[1]). I
remember writing the code in 2007-2008, I just don't remember why.

On modern Linux and FreeBSD, there's no libresolv.so any more and those
symbols have been rolled up into libc.so. It's still necessary on Darwin
systems, so this commit introduces WrapResolv.

It also resolves the unity build issues relating to libresolv symbols.

[1] https://code.qt.io/cgit/qt/qt.git/tree/src/network/kernel/qhostinfo_unix.cpp?h=v4.5.1

Task-number: QTBUG-109394
Change-Id: Ic5799e4d000b6c9395109e008780643bac52122b
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>

--- a/src/network/CMakeLists.txt
+++ b/src/network/CMakeLists.txt
@@ -174,15 +174,6 @@ qt_internal_extend_target(Network CONDITION UNIX
         kernel/qhostinfo_unix.cpp
         socket/qnativesocketengine_unix.cpp
         socket/qnet_unix_p.h
-    NO_UNITY_BUILD_SOURCES
-        kernel/qhostinfo_unix.cpp # Temporary exclusion until, this,
-                                  # https://codereview.qt-project.org/c/qt/qtbase/+/463670
-                                  # is merged.
-)
-
-qt_internal_extend_target(Network CONDITION QT_FEATURE_dlopen AND UNIX
-    LIBRARIES
-        ${CMAKE_DL_LIBS}
 )
 
 qt_internal_extend_target(Network CONDITION QT_FEATURE_linux_netlink AND UNIX
@@ -193,11 +184,6 @@ qt_internal_extend_target(Network CONDITION QT_FEATURE_linux_netlink AND UNIX
 qt_internal_extend_target(Network CONDITION UNIX AND NOT QT_FEATURE_linux_netlink
     SOURCES
         kernel/qnetworkinterface_unix.cpp
-)
-
-qt_internal_extend_target(Network CONDITION ANDROID AND QT_FEATURE_dnslookup
-    SOURCES
-        kernel/qdnslookup_android.cpp
 )
 
 qt_internal_extend_target(Network CONDITION WIN32
@@ -212,11 +198,6 @@ qt_internal_extend_target(Network CONDITION WIN32
         iphlpapi
         secur32
         winhttp
-)
-
-qt_internal_extend_target(Network CONDITION QT_FEATURE_dnslookup AND WIN32
-    SOURCES
-        kernel/qdnslookup_win.cpp
 )
 
 qt_internal_extend_target(Network CONDITION APPLE AND NOT UIKIT
@@ -236,6 +217,22 @@ qt_internal_extend_target(Network CONDITION APPLE
         ${FWCFNetwork}
 )
 
+qt_internal_extend_target(Network CONDITION QT_FEATURE_dnslookup AND TEST_res_ninit
+    SOURCES
+        kernel/qdnslookup_unix.cpp
+    LIBRARIES
+        WrapResolv::WrapResolv
+)
+
+qt_internal_extend_target(Network CONDITION QT_FEATURE_dnslookup AND WIN32
+    SOURCES
+        kernel/qdnslookup_win.cpp
+)
+
+qt_internal_extend_target(Network CONDITION QT_FEATURE_dnslookup AND NOT TEST_res_ninit AND NOT WIN32
+    SOURCES
+        kernel/qdnslookup_dummy.cpp
+)
 
 qt_internal_extend_target(Network CONDITION IOS OR MACOS
     SOURCES
@@ -369,10 +366,6 @@ qt_internal_extend_target(Network CONDITION QT_FEATURE_ocsp AND QT_FEATURE_opens
         ssl/qocsp_p.h
 )
 
-qt_internal_extend_target(Network CONDITION QT_FEATURE_dnslookup AND UNIX AND NOT ANDROID
-    SOURCES
-        kernel/qdnslookup_unix.cpp
-)
 qt_internal_add_docs(Network
     doc/qtnetwork.qdocconf
 )
