--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -104,6 +104,8 @@ qt_internal_add_module(Core
         global/q20memory.h
         global/q20type_traits.h
         global/q23functional.h
+        global/q23utility.cpp # remove once we have a user that tests this
+        global/q23utility.h
         global/qxpfunctional.h
         global/qxptype_traits.h
         ipc/qsharedmemory.cpp ipc/qsharedmemory.h ipc/qsharedmemory_p.h
