wasm: set stack size to 5MB again
Recent Emscripten 3.1.27 reduces the stack size to 64KB,
which is way to small for Qt-based applications.

Restore the previous stack size (5 MB) by setting STACK_SIZE.

Change-Id: I6c25e31b32dc1d551fa423655fcef4891830bcd1
Reviewed-by: Piotr Wierciński <piotr.wiercinski@qt.io>
Reviewed-by: Lorn Potter <lorn.potter@gmail.com>

--- a/mkspecs/common/wasm/wasm.conf
+++ b/mkspecs/common/wasm/wasm.conf
@@ -36,7 +36,8 @@ EMCC_COMMON_LFLAGS += \
     -s FETCH=1 \
     -s MODULARIZE=1 \
     -s EXPORT_NAME=createQtAppInstance \
-    -s WASM_BIGINT=1
+    -s WASM_BIGINT=1 \
+    -s STACK_SIZE=5MB
 
 # The -s arguments can also be used with release builds,
 # but are here in debug for clarity.
