Move rsslisting example into corelibe/serialization
The implementation of the stream-based XML parser resides in
coreslib/serialization. Moving the rsslisting example there.

Task-number: QTBUG-110647
Pick-to: 6.5
Change-Id: I862909e767301250750b6ee0d8ac7e20d6bad2b1
Reviewed-by: Marc Mutz <marc.mutz@qt.io>

--- a/examples/corelib/serialization/CMakeLists.txt
+++ b/examples/corelib/serialization/CMakeLists.txt
@@ -4,3 +4,6 @@
 qt_internal_add_example(cbordump)
 qt_internal_add_example(convert)
 qt_internal_add_example(savegame)
+if(TARGET Qt6::Network AND TARGET Qt6::Widgets)
+    qt_internal_add_example(rsslisting)
+endif()
